--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -6,7 +6,9 @@
 @text-color: #3e3e3e;
 
 /** documentation list **/
-
+.doc-container {
+  flex-direction: row;
+}
 .list {
   .item {
     margin: 8px 0;
