style: update header and index

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,6 +1,6 @@
 /* header module */
 @import './base.less';
-@nav_height: 50px;
+@nav_height: 40px;
 @search_box_width: 300px;
 @search_box_height: 40px;
 
@@ -16,9 +16,10 @@ header {
   }
 
   .nav-brand {
+    height: 36px;
     img {
-      display: inline-block;
-      height: 36px;
+      display: block;
+      height: 100%;
     }
   }
 
@@ -28,6 +29,7 @@ header {
     align-items: center;
     justify-content: space-between;
     min-height: @nav_height;
+    line-height: @nav_height;
 
     .navigations {
       display: flex;
@@ -35,7 +37,7 @@ header {
       padding: 0;
       li {
         margin: 0 10px;
-        font-size: 0.9rem;
+        font-size: 1rem;
         letter-spacing: 1px;
         color: @white;
         &.sel a,
@@ -45,8 +47,9 @@ header {
         }
       }
       .btn-download {
-        padding: 4px 8px 5px;
-        .rounded-corners(2px);
+        padding: 4px 4px 5px;
+        // border: 1px solid fade(@white, 50%);
+        .rounded-corners(5px);
         color: @white;
         &:hover {
           background-color: @white;
@@ -82,7 +85,8 @@ header {
 
   header nav .navigations {
     li {
-      margin: 15px 5px;
+      margin: 15px 3px;
+      font-size: 0.9rem;
     }
   }
 }
