--- a/src/less/index.less
+++ b/src/less/index.less
@@ -145,12 +145,13 @@
     .row {
       display: flex;
       flex-flow: row wrap;
-      justify-content: space-around;
+      justify-content: space-between;
       align-items: center;
       text-align: center;
     }
     .item {
       margin-top: 60px;
+      flex-basis: 33%;
       p {
         max-width: 240px;
         margin-left: auto;
@@ -171,7 +172,7 @@
     }
     .item-long {
       p {
-        max-width: 250px;
+        max-width: 270px;
         margin-left: auto;
         margin-right: auto;
       }
@@ -264,7 +265,8 @@
     justify-content: space-around;
   }
   .page .features .item {
-    width: 100%;
+    // width: 100%;
+    flex-basis: 100%;
   }
   .page .features .row-1 .item {
     margin-top: 60px;
