--- a/layouts/_default/baseof.tpl.html
+++ b/layouts/_default/baseof.tpl.html
@@ -29,7 +29,7 @@
           {{ partial "header" . }}
         {{ end }}
 
-        {{ block "main" . }}{{ end }}
+        {{ block "{main}" . }}{{ end }}
 
         {{ if $data_i18_cn }}
           {{ partial "footer-cn" . }}
@@ -38,7 +38,7 @@
         {{ end }}
     </div>
     <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> -->
     <script src="/js/app.js"></script>
     {{ block "footjs" . }}{{ end }}
     {{ partial "search/algolia-js" . }}
