fixed recruit html tag

--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -32,7 +32,7 @@
             is to serve as a one-stop solution for online transactions and analysis.
         </p>
         <div class="buttons">
-            <a href="doc-overview.html" class="btn btn-primary f-fl" target="_blank"> GET STARTED </a>
+            <a href="/en/docs" class="btn btn-primary f-fl" target="_blank"> GET STARTED </a>
             <a href="http://github.com/pingcap" class="btn btn-github f-fl" target="_blank"> GitHub </a>
         </div>
     </div>
