--- a/src/less/index.less
+++ b/src/less/index.less
@@ -86,7 +86,7 @@
         line-height: @button_height;
         width: 146px;
         padding: 0 20px;
-        border-radius: 18px;
+        .rounded-corners(18px);
         margin-top: 45px;
         font-size: 0.8rem;
         text-align: center;
