--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -33,7 +33,7 @@
             TiDB 是新一代开源分布式 NewSQL 数据库，模型受 Google Spanner / F1 论文的启发, 实现了自动的水平伸缩，强一致性的分布式事务，基于 Raft 算法的多副本复制等重要 NewSQL 特性。 TiDB 结合了 RDBMS 和 NoSQL 的优点，部署简单，在线弹性扩容和异步表结构变更不影响业务， 真正的异地多活及自动故障恢复保障数据安全，同时兼容 MySQL 协议，使迁移使用成本降到极低。
         </p>
         <div class="buttons">
-            <a href="doc-overview-zh.html" class="btn btn-primary" target="_blank"> 了解更多 </a>
+            <a href="/docs-cn" class="btn btn-primary" target="_blank"> 了解更多 </a>
             <a href="http://github.com/pingcap" class="btn btn-github" target="_blank"> GitHub </a>
         </div>
     </div>
