footer: update usage for svgs

--- a/layouts/_default/baseof.tpl.html
+++ b/layouts/_default/baseof.tpl.html
@@ -29,7 +29,7 @@
           {{ partial "header" . }}
         {{ end }}
 
-        {{ block "{main}" . }}{{ end }}
+        {{ block "main" . }}{{ end }}
 
         {{ if $data_i18_cn }}
           {{ partial "footer-cn" . }}
