--- a/layouts/partials/footer-cn.html
+++ b/layouts/partials/footer-cn.html
@@ -8,63 +8,14 @@
         <div class="right">
             <div class="social-links">
                 <a href="mailto:info@pingcap.com" class="link_icon email">
-                        <svg height="512" preserveAspectRatio="xMidYMid" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <defs>
-                                <style>
-                                .cls-1 {
-                                    fill: #fff;
-                                    fill-rule: evenodd;
-                                }
-                                </style>
-                            </defs>
-                            <path class="cls-1" d="M256.000,512.000 C114.615,512.000 0.000,397.385 0.000,256.000 C0.000,114.615 114.615,0.000 256.000,0.000 C397.385,0.000 512.000,114.615 512.000,256.000 C512.000,397.385 397.385,512.000 256.000,512.000 ZM108.159,344.493 L191.319,265.831 L108.159,197.002 L108.159,344.493 ZM403.839,147.838 L108.159,147.838 L108.159,177.337 L255.999,305.162 L403.839,177.337 L403.839,147.838 ZM403.839,197.002 L320.679,265.831 L403.839,344.493 L403.839,197.002 ZM311.439,275.663 L255.999,324.827 L200.559,275.663 L108.159,364.158 L403.839,364.158 L311.439,275.663 Z" />
-                        </svg>
-                    </a>
+                  {{ partial "svgs/icon-mail.svg" (dict "fill" "#fff" "size" 26 "width" 26 ) }}
+                </a>
                 <a href="javascript:;" class="link_icon wechat" id="wechat">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
-                            <defs>
-                                <style>
-                                .cls-1 {
-                                    fill: #fff;
-                                }
-
-                                .cls-2 {
-                                    fill-rule: evenodd;
-                                }
-                                </style>
-                            </defs>
-                            <title>weixin</title>
-                            <g>
-                                <g>
-                                    <circle class="cls-1" cx="12.5" cy="12.5" r="12.5" />
-                                    <path class="cls-2" d="M15.36,10.23a4.58,4.58,0,0,1,.51,0c-.46-2.14-2.75-3.73-5.36-3.73-2.92,0-5.31,2-5.31,4.52a4.35,4.35,0,0,0,2.12,3.58l-.53,1.6,1.86-.93a9.09,9.09,0,0,0,1.86.27l.5,0a4,4,0,0,1-.16-1.11,4.35,4.35,0,0,1,4.51-4.2h0M12.47,8.68a.82.82,0,1,1-.82.82.82.82,0,0,1,.82-.82h0M8.75,10.34a.82.82,0,1,1,.82-.82.82.82,0,0,1-.82.82h0m11.42,4c0-2.12-2.12-3.85-4.51-3.85s-4.52,1.73-4.52,3.85,2,3.85,4.52,3.85A6.67,6.67,0,0,0,17.25,18l1.46.8-.4-1.33a4,4,0,0,0,1.86-3.06h0m-5.9-.6a.58.58,0,1,1,.58-.58.58.58,0,0,1-.58.58h0m2.92,0a.58.58,0,1,1,.58-.58.58.58,0,0,1-.58.58h0m0,0Z" />
-                                </g>
-                            </g>
-                        </svg>
-                    </a>
+                  {{ partial "svgs/icon-weixin.svg" (dict "fill" "#fff" "size" 26 "width" 26 ) }}
+                </a>
                 <a href="http://www.weibo.com/pingcap" class="link_icon weibo">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
-                            <defs>
-                                <style>
-                                .cls-1 {
-                                    fill: #fff;
-                                }
-
-                                .cls-2 {
-                                    fill: #1e1e20;
-                                    fill-rule: evenodd;
-                                }
-                                </style>
-                            </defs>
-                            <title>weibo</title>
-                            <g>
-                                <g>
-                                    <circle class="cls-1" cx="12.5" cy="12.5" r="12.5" />
-                                    <path class="cls-2" d="M10.89,12.51a2,2,0,0,0-1.95,2.1,2,2,0,0,0,2.44,1.49A2,2,0,0,0,13.33,14a2,2,0,0,0-2.44-1.49Zm-.35,2.8a.72.72,0,0,1-.86-.52.72.72,0,0,1,.69-.74.72.72,0,0,1,.86.52.72.72,0,0,1-.69.74Zm1.09-1.12a.28.28,0,1,1,.26-.35.31.31,0,0,1-.26.35Zm5.56-3.32a.5.5,0,0,0,.65-.27,1.78,1.78,0,0,0-2.33-2.33.5.5,0,0,0,.39.92.78.78,0,0,1,1,1,.5.5,0,0,0,.27.65ZM16,11.61l.1-.28c.87-1.68-1.38-2.22-2.67-1.51s-.67-.49-.67-.49c.21-2.2-2.1-1.23-2.1-1.23-5.38,3-4.83,6-4.83,6,0,1.65,2.58,3.48,5.83,3.48,4.31,0,6.77-2.52,6.34-4.39a2.52,2.52,0,0,0-2-1.59Zm-5,5.12c-2.82,0-3.78-1.47-3.78-2.53,0-1.68,2.23-2.92,4.32-2.92s3.59.89,3.93,2.06c.51,1.73-1.7,3.39-4.48,3.39ZM16.2,6.28a3.64,3.64,0,0,0-.91.12.5.5,0,0,0,.25,1,2.64,2.64,0,0,1,3.14,3.45.5.5,0,1,0,.94.34A3.63,3.63,0,0,0,16.2,6.28Z" />
-                                </g>
-                            </g>
-                        </svg>
-                    </a>
+                   {{ partial "svgs/icon-weibo.svg" (dict "fill" "#fff" "size" 26 "width" 26 ) }}
+                </a>
             </div>
             <div id="subscribe" class="subscribe">
                 <!-- Begin MailChimp Signup Form -->
