--- a/layouts/blog-cn/list.html
+++ b/layouts/blog-cn/list.html
@@ -1,3 +1,5 @@
+{{ define "title" }}博客{{ end }}
+
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "blog"}}
 {{$.Scratch.Set "data_i18_cn" true }}
