styles: replace px to rem for layout

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -8,7 +8,7 @@
 @bg_black_with_alpha90: fade(black, 90%);
 
 // width
-@max_width_pc: 1012px;
+@max_width_pc: 51rem;
 
 // box
 @box_size: border-box;
