--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -7,7 +7,7 @@
 /** add ellipsis in a line **/
 .footer {
   width: 100%;
-  padding: 60px 0;
+  padding: 3rem 0;
   background-color: @bg_black_with_alpha90;
   color: @white;
 
