--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,11 +1,12 @@
 /* header module */
 @import './base.less';
-@nav_height: 40px;
-@search_box_width: 300px;
-@search_box_height: 40px;
+@nav_height: 2rem;
+@search_box_width: 15rem;
+@search_box_height: 2rem;
+@nav_brand_height: 1.8rem;
 
 header {
-  padding: 15px;
+  padding: 0.75rem;
   width: 100%;
   background-color: @bg_black_with_alpha90;
 
@@ -16,7 +17,7 @@ header {
   }
 
   .nav-brand {
-    height: 36px;
+    height: @nav_brand_height;
     img {
       display: block;
       height: 100%;
@@ -36,7 +37,7 @@ header {
       justify-content: center;
       padding: 0;
       li {
-        margin: 0 10px;
+        margin: 0 0.5rem;
         font-size: 1rem;
         letter-spacing: 1px;
         color: @white;
@@ -66,7 +67,7 @@ header {
       border: 1px solid fade(@white, 0%);
       .rounded-corners(2px);
       outline: 0;
-      background-color: fade(@white, 12%);
+      background-color: fade(@white, 20%);
       color: @gray_white;
       font-size: 1rem;
       transition: opacity 0.15s ease-in;
