--- a/src/less/index.less
+++ b/src/less/index.less
@@ -6,9 +6,10 @@
 // box
 @logo_wodth: 210px;
 @logo_height: 80px;
-@header_height: calc(~'30px + '@nav_height);
-@button_height: 36px;
-@advantage_row_margin: 80px;
+@header_height: calc(~'1.5rem + '@nav_height);
+@button_height: 1.8rem;
+@advantage_row_margin: 4rem;
+@horizontal_padding: 0.75rem;
 
 // color
 @dark_blue: #0d0b1e;
@@ -22,16 +23,18 @@
 @line_height: 1.8;
 
 .page {
-  /* Section 1 */
   .container {
     display: flex;
   }
+  /* Section 1 */
   .slogan-mask {
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 100%;
-    height: 100vh;
-    min-height: 730px;
-    padding: calc(~'120px + '@header_height) 0;
+    height: 100%;
+    min-height: 100vh;
+    padding: 0 @horizontal_padding;
     background: url('/images/slogan-mask.png') no-repeat center top;
     background-attachment: fixed;
     background-size: cover;
@@ -57,14 +60,14 @@
     }
 
     .slogan {
-      margin: 22px 0 50px;
+      margin: 1.1rem 0 2.5rem;
       font-weight: 600;
       font-size: 2.4rem;
       color: @white;
     }
 
     .tagline {
-      margin-bottom: 20px;
+      margin-bottom: 1rem;
       font-size: 1.1rem;
       color: @white;
     }
@@ -76,7 +79,7 @@
     }
 
     .buttons {
-      max-width: 320px;
+      max-width: 16rem;
       display: flex;
       flex-flow: row wrap;
       justify-content: space-between;
@@ -84,10 +87,10 @@
       .btn {
         height: @button_height;
         line-height: @button_height;
-        width: 146px;
-        padding: 0 20px;
+        width: 7.2rem;
+        padding: 0 1rem;
         .rounded-corners(18px);
-        margin-top: 45px;
+        margin-top: 2.25rem;
         font-size: 0.8rem;
         text-align: center;
       }
@@ -101,7 +104,7 @@
       }
       .btn-github {
         position: relative;
-        padding-left: 45px;
+        padding-left: 2.25rem;
         border: 1px solid @white;
         background: transparent;
         line-height: calc(@button_height~' - 2px');
@@ -129,14 +132,14 @@
   }
   /* Section 2 */
   .features {
-    padding: calc(~'120px + '@header_height) 0;
+    padding: calc(~'6rem + '@header_height) @horizontal_padding;
     background: url('/images/features-mask.png') no-repeat center top;
     background-attachment: fixed;
     background-size: cover;
 
     h3 {
-      height: 48px;
-      margin: 36px 0 6px;
+      height: 2.4rem;
+      margin: 1.8rem 0 0.3rem;
       color: @white;
     }
     .container {
@@ -150,7 +153,7 @@
       text-align: center;
     }
     .item {
-      margin-top: 60px;
+      margin-top: 3rem;
       flex-basis: 33%;
       p {
         max-width: 240px;
@@ -179,14 +182,14 @@
     }
     .image-wrap {
       position: relative;
-      width: 70px;
-      height: 70px;
+      width: 3.5rem;
+      height: 3.5rem;
       margin: 0 auto;
       border: 2px solid @white;
       border-radius: 50% 50%;
       img {
         display: block;
-        width: 34px;
+        width: 1.7rem;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -196,7 +199,7 @@
   }
   /* Section 3 */
   .advantages {
-    padding: calc(~'120px + '@header_height) 0 400px;
+    padding: calc(~'6rem + '@header_height) @horizontal_padding 10rem;
     background: url('/images/advantages-mask.png') no-repeat center bottom
       @dark_blue;
     background-size: cover;
@@ -209,7 +212,7 @@
     h4 {
       color: @theme_blue;
       font-size: 0.9rem;
-      margin-bottom: 12px;
+      margin-bottom: 0.6rem;
       font-weight: @font_weight_400;
     }
 
@@ -224,15 +227,15 @@
       margin-bottom: @advantage_row_margin;
 
       .image-wrap {
-        margin: 20px 0;
+        margin: 1rem 0;
         img {
-          width: 280px;
+          width: 14rem;
         }
       }
 
       .content {
         flex-basis: 70%;
-        padding: 0 10px;
+        padding: 0 0.5rem;
 
         .text {
           font-size: @text_size;
@@ -255,6 +258,9 @@
 }
 
 @media (max-width: 500px) {
+  .page .slogan-mask {
+    padding-top: 12rem;
+  }
   .page .slogan-mask .container {
     align-items: center;
     text-align: center;
@@ -265,11 +271,10 @@
     justify-content: space-around;
   }
   .page .features .item {
-    // width: 100%;
     flex-basis: 100%;
   }
   .page .features .row-1 .item {
-    margin-top: 60px;
+    margin-top: 3rem;
   }
   .page .slogan-mask .desc {
     max-width: 100%;
