chore: 更新 i18n 链接相关取值和配置逻辑

--- a/layouts/page/about-cn.html
+++ b/layouts/page/about-cn.html
@@ -1,6 +1,7 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "about"}}
 {{$.Scratch.Set "data_i18_cn" true }}
+{{$.Scratch.Set "data_i18_link" "/about" }}
 <!-- <link href="/css/about.css" rel="stylesheet"> -->
 <style type="text/css" media="screen">
 .amap-logo,
@@ -24,7 +25,7 @@ function init() {
     resizeEnable: true,
     zoom: 15,
     center: [116.357273, 40.042345],
-    mapStyle: 'amap://styles/light' //样式URL
+    mapStyle: 'amap://styles/light', //样式URL
   })
   //添加点标记，并使用自己的icon
   new AMap.Marker({
@@ -32,8 +33,8 @@ function init() {
     position: [116.357273, 40.042345],
     icon: new AMap.Icon({
       size: new AMap.Size(32, 32), //图标大小
-      image: 'https://download.pingcap.com/images/location.svg'
-    })
+      image: 'https://download.pingcap.com/images/location.svg',
+    }),
   })
 }
 </script>
@@ -51,7 +52,7 @@ function init() {
             </div>
         </div>
         <div class="openjobs">
-            <a href="joblist-zh.html" class="link">OPEN JOBS</a>
+            <a href="/recruit-cn" class="link">OPEN JOBS</a>
         </div>
     </div>
 </section>
