--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -1,4 +1,5 @@
 {{ define "headcss" }}
+{{$.Scratch.Set "data_i18_link" "/" }}
 <style type="text/css" media="screen">
     header {
         position: fixed;
