--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,10 @@
 <section class="footer" id="footer">
+  {{ $data_i18_link := $.Scratch.Get "data_i18_link" }}
     <div class="container">
         <div class="left">
           <img src="https://download.pingcap.com/images/pingcap_logo.png" class="logo" alt="PingCap" style="width: 140px;">
           <span class="copyright">&copy; 2017 PingCAP. All Rights Reserved.</span>
-          <a href="{{ .Params.data_i18_page_link }}" class="btn-lang" id="lang">中文</a>
+          <a href="{{ or $data_i18_link .Params.data_i18_page_link }}" class="btn-lang" id="lang">中文</a>
         </div>
         <div class="right">
             <div class="social-links">
