--- a/layouts/_default/baseof.tpl.html
+++ b/layouts/_default/baseof.tpl.html
@@ -13,9 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{- block "title" . }}
-      {{or .Title "Home"}}
-    {{ end -}} | PingCAP</title>
+    <title>{{- block "title" . }}{{- or .Title "Home" -}}{{ end -}} | PingCAP</title>
     {{ block "headcss" . }}{{ end }}
     {{ partial "head/meta" . }}
     {{ partial "head/ga" . }}
