--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -1,6 +1,7 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "docs"}}
 {{$.Scratch.Set "data_i18_cn" true }}
+{{$.Scratch.Set "data_i18_link" "/docs" }}
 <link href="/css/doc.css" rel="stylesheet">
 {{ end }}
 
