--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -1,5 +1,6 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "about"}}
+{{$.Scratch.Set "data_i18_link" "/about-cn" }}
 <link href="/css/about.css" rel="stylesheet">
 <style type="text/css" media="screen">
 .amap-logo,
@@ -18,23 +19,23 @@
 {{ define "footjs" }}
 <script type="text/javascript" src='https://webapi.amap.com/maps?v=1.3&key=5943f0161bc8beb9f40b4f652faf648f&callback=init'></script>
 <script type="text/javascript">
-function init(){
-    var map = new AMap.Map('map', {
-        resizeEnable: true,
-        zoom: 15,
-        center: [116.357273, 40.042345],
-        mapStyle: 'amap://styles/light' //样式URL
-    });
-    //添加点标记，并使用自己的icon
-    new AMap.Marker({
-        map: map,
-        position: [116.357273, 40.042345],
-        icon: new AMap.Icon({
-            size: new AMap.Size(32, 32), //图标大小
-            image: "https://download.pingcap.com/images/location.svg"
-        })
-    });
-    map.setLang('en');
+function init() {
+  var map = new AMap.Map('map', {
+    resizeEnable: true,
+    zoom: 15,
+    center: [116.357273, 40.042345],
+    mapStyle: 'amap://styles/light', //样式URL
+  })
+  //添加点标记，并使用自己的icon
+  new AMap.Marker({
+    map: map,
+    position: [116.357273, 40.042345],
+    icon: new AMap.Icon({
+      size: new AMap.Size(32, 32), //图标大小
+      image: 'https://download.pingcap.com/images/location.svg',
+    }),
+  })
+  map.setLang('en')
 }
 </script>
 {{ end }}
@@ -51,7 +52,7 @@ function init(){
             </div>
         </div>
         <div class="openjobs">
-            <a href="joblist.html" class="link">OPEN JOBS</a>
+            <a href="/recruit" class="link">OPEN JOBS</a>
         </div>
     </div>
 </section>
