--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -1,5 +1,6 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "data_i18_cn" true }}
+{{$.Scratch.Set "data_i18_link" "/en" }}
 <style type="text/css" media="screen">
     header {
         position: fixed;
