styles: update doc

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -316,6 +316,14 @@ h4 {
   flex-direction: column;
 }
 
+/* 大屏幕 */
+@media (min-width: 1920px) {
+  html,
+  body {
+    font-size: 24px;
+  }
+}
+
 /* 小屏幕（平板，大于等于 768px） */
 
 @media (max-width: 768px) {
