--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -1,6 +1,8 @@
 /* docs page */
 
 @import './base.less';
+@import './header.less';
+@import './footer.less';
 @import './nav_tree.less';
 
 @text-color: #3e3e3e;
