--- a/src/less/index.less
+++ b/src/less/index.less
@@ -34,7 +34,7 @@
     width: 100%;
     height: 100%;
     min-height: 100vh;
-    padding: 0 @horizontal_padding;
+    padding: calc(~'4rem + '@header_height) @horizontal_padding;
     background: url('/images/slogan-mask.png') no-repeat center top;
     background-attachment: fixed;
     background-size: cover;
