chore(i18n): 给blog/recruit等module加上layout template，同时修改 data_i18n_link 注入等

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,7 +1,6 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "blog"}}
-{{$.Scratch.Set "data_i18_link" "/blog" }}
-{{$.Scratch.Set "data_i18_cn" true }}
+{{$.Scratch.Set "data_i18_link" "/blog-cn" }}
 <link href="/css/doc.css" rel="stylesheet">
 <link href="/css/blog.css" rel="stylesheet">
 {{ end }}
@@ -12,7 +11,7 @@
 <div class="row">
 
   <div class="col-md-4 nav nav-tree" id="st-tree">
-    <h1 class="title"> 博客 </h1>
+    <h1 class="title"> Blog </h1>
     <div class="st_tree" id="doc-nav">
       {{ $blogs := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil  }}
        <ul>
