--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -6,7 +6,7 @@
 {{ define "main" }}
 <div class="container doc-container">
   <div class="nav nav-tree">
-    <h1 class="title"> 文档 </h1>
+    <h1 class="title"> Document </h1>
     <div class="st_tree">
       {{ partial "tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
      </div>
