--- a/layouts/recruit/list.html
+++ b/layouts/recruit/list.html
@@ -1,7 +1,6 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "about"}}
-{{$.Scratch.Set "data_i18_link" "/recruit" }}
-{{$.Scratch.Set "data_i18_cn" true }}
+{{$.Scratch.Set "data_i18_link" "/recruit-cn" }}
 <link href="/css/joblist.css" rel="stylesheet">
 {{ end }}
 
@@ -9,7 +8,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4 nav nav-tags">
-            <h1 class="title">职位类型</h1>
+            <h1 class="title">Job Categories</h1>
             <ul class="tag-list f-cb">
               {{ range .Data.Pages.GroupByParam "tags" }}
               <!-- Todo sel active class -->
@@ -18,7 +17,7 @@
             </ul>
         </div>
         <div class="col-md-8 list">
-            <h1 class="title board-title">PingCAP 开放职位</h1>
+            <h1 class="title board-title">Current Job Openings at PingCAP</h1>
             {{ range .Data.Pages }}
                 <div class="job">
                     <h1 class="title"><a href="{{ .URL }}">{{ .Title }}</a></h1>
