--- a/layouts/recruit/single.html
+++ b/layouts/recruit/single.html
@@ -1,7 +1,6 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "about"}}
-{{$.Scratch.Set "data_i18_cn" true }}
-{{$.Scratch.Set "data_i18_link" "/recruit" }}
+{{$.Scratch.Set "data_i18_link" "/recruit-cn" }}
 <link href="/css/recruit.css" rel="stylesheet">
 {{ end }}
 
