chore: 更新 docs 相关的 layout template，目录和首页用值逻辑

--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -10,13 +10,13 @@
   <div class="col-md-4 nav nav-tree">
     <h1 class="title"> Document </h1>
     <div class="st_tree">
-      {{ partial "tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
+      {{ partial "tree-nav.html" (dict "tree" .Site.Data.docs_toc "global" .) }}
     </div>
   </div>
 
     <div class="col-md-8 list">
       <div class="item">
-        <div class="content">{{ readFile "/content/docs-cn/overview.md" | markdownify }}</div>
+        <div class="content">{{ readFile "/content/docs/overview.md" | markdownify }}</div>
 
         <div class="draw">
           <img src="https://download.pingcap.com/images/docs-simple.png" width="100%">
