--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -8,7 +8,7 @@
   <div class="nav nav-tree">
     <h1 class="title"> Document </h1>
     <div class="st_tree">
-      {{ partial "tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
+      {{ partial "tree-nav.html" (dict "tree" .Site.Data.docs_toc "global" .) }}
      </div>
   </div>
 
