styles and templates: update usage for svgs

--- a/layouts/blog-cn/list.html
+++ b/layouts/blog-cn/list.html
@@ -4,11 +4,11 @@
 {{$.Scratch.Set "nav_active" "blog"}}
 {{$.Scratch.Set "data_i18_cn" true }}
 {{$.Scratch.Set "data_i18_link" "/blog" }}
-<link href="/css/bloglist.css" rel="stylesheet">
+<!-- <link href="/css/bloglist.css" rel="stylesheet"> -->
 {{ end }}
 
 {{ define "main" }}
-<div class="container">
+<div class="container bloglist">
     <div class="row">
         <div class="col-md-4 nav nav-tags">
           {{ $posts := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil  }}
