--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -44,21 +44,21 @@
         <div class="row row-1">
             <div class="item">
                 <div class="image-wrap">
-                    <img class="icon" src="https://download.pingcap.com/images/icon_opensource.svg" alt="100% OPEN SOURCE">
+                  <span class="icon">{{ partial "svgs/icon-opensource.svg" (dict "fill" "#fff" "width" 34 "height" 31 ) }}</span>
                 </div>
                 <h3>活跃的开源社区</h3>
                 <p>&nbsp;数据库领域世界级开源社区，真正顶尖的开源技术</p>
             </div>
             <div class="item">
                 <div class="image-wrap">
-                    <img class="icon" src="https://download.pingcap.com/images/icon_sql.svg" style="width: 36px;" alt="MYSQL COMPATIBILITY">
+                  <span class="icon">{{ partial "svgs/icon-sql.svg" (dict "fill" "#fff" "width" 36 "height" 29 ) }}</span>
                 </div>
                 <h3>兼容 MySQL 协议</h3>
                 <p>从 MySQL 无缝切换到 TiDB，几乎无需修改代码，迁移成本极低</p>
             </div>
             <div class="item item-short">
                 <div class="image-wrap">
-                    <img class="icon" src="https://download.pingcap.com/images/icon_transaction.svg" alt="DISTRIBUTED TRANSACTION">
+                  <span class="icon">{{ partial "svgs/icon-transaction.svg" (dict "fill" "#fff" "width" 34 "height" 26 ) }}</span>
                 </div>
                 <h3>分布式事务</h3>
                 <p>把 TiDB 看作是一个单机 RDBMS 。跨多个机器启动事务，不影响一致性</p>
@@ -67,21 +67,21 @@
         <div class="row">
             <div class="item item-short">
                 <div class="image-wrap">
-                    <img class="icon" src="https://download.pingcap.com/images/icon_failover.svg" alt="AUTO FAILOVER">
+                  <span class="icon">{{ partial "svgs/icon-failover.svg" (dict "fill" "#fff" "width" 34 "height" 32 ) }}</span>
                 </div>
                 <h3>故障自动恢复</h3>
                 <p>无需人工干预，真正意义上的 Auto-Failover</p>
             </div>
             <div class="item">
                 <div class="image-wrap">
-                    <img class="icon" src="https://download.pingcap.com/images/icon_ddl.svg" alt="ONLINE DDL">
+                  <span class="icon">{{ partial "svgs/icon-ddl.svg" (dict "fill" "#fff" "width" 34 "height" 30 ) }}</span>
                 </div>
                 <h3>在线 DDL</h3>
                 <p>按需更新 TiDB Schema。添加新的列和索引，不影响当前业务</p>
             </div>
             <div class="item item-short">
                 <div class="image-wrap">
-                    <img class="icon" src="https://download.pingcap.com/images/icon_time.svg" alt="7x24 HOURS  TECHNICAL SUPPORT">
+                  <span class="icon">{{ partial "svgs/icon-time.svg" (dict "fill" "#fff" "width" 34 "height" 34 ) }}</span>
                 </div>
                 <h3>7&#215;24 小时技术支持</h3>
                 <p>专业技术团队，全面快速响应支持</p>
