--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -1,5 +1,4 @@
-{{ define "headcss" }}
-{{$.Scratch.Set "data_i18_link" "/" }}
+{{ define "headcss" }} {{$.Scratch.Set "data_i18_link" "/" }}
 <style type="text/css" media="screen">
     header {
         position: fixed;
@@ -15,14 +14,13 @@
         background-image: linear-gradient(to top, #080000, #100f2e) !important;
         color: #fff !important;
     }
+
     .page p {
-      font-family: 'Lato Light' !important;
-      font-weight: 300 !important;
+        font-family: 'Lato Light' !important;
+        font-weight: 300 !important;
     }
 </style>
-{{ end }}
-
-{{ define "main" }}
+{{ end }} {{ define "main" }}
 <section class="slogan-mask">
     <div class="container">
         <img class="logo" src="https://download.pingcap.com/images/tidb-logo.png" alt="TiDB">
@@ -43,21 +41,21 @@
         <div class="row row-1">
             <div class="item">
                 <div class="image-wrap">
-                    <img class="icon" src="https://download.pingcap.com/images/icon_opensource.svg" alt="100% OPEN SOURCE">
+                    <span class="icon">{{ partial "svgs/icon-opensource.svg" (dict "fill" "#fff" "width" 34 "height" 31 ) }}</span>
                 </div>
                 <h3>OPEN SOURCE</h3>
                 <p>Born and bred in the community, TiDB is one of the most famous open source distributed databases.</p>
             </div>
             <div class="item item-long">
                 <div class="image-wrap">
-                    <img class="icon" src="https://download.pingcap.com/images/icon_sql.svg" style="width: 36px;" alt="MYSQL COMPATIBILITY">
+                    <span class="icon">{{ partial "svgs/icon-sql.svg" (dict "fill" "#fff" "width" 36 "height" 29 ) }}</span>
                 </div>
                 <h3>MYSQL COMPATIBILITY</h3>
                 <p>Use TiDB as a scalable MySQL. You can replace MySQL with TiDB to power your application without changing a single line of code in most cases.</p>
             </div>
             <div class="item item-long">
                 <div class="image-wrap">
-                    <img class="icon" src="https://download.pingcap.com/images/icon_transaction.svg" alt="DISTRIBUTED TRANSACTION">
+                    <span class="icon">{{ partial "svgs/icon-transaction.svg" (dict "fill" "#fff" "width" 34 "height" 26 ) }}</span>
                 </div>
                 <h3>DISTRIBUTED TRANSACTION</h3>
                 <p>Think of TiDB as a standalone RDBMS. You can start a transaction that crosses multiple machines without worrying about consistency. </p>
@@ -66,21 +64,21 @@
         <div class="row">
             <div class="item">
                 <div class="image-wrap">
-                    <img class="icon" src="https://download.pingcap.com/images/icon_failover.svg" alt="AUTO FAILOVER">
+                    <span class="icon">{{ partial "svgs/icon-failover.svg" (dict "fill" "#fff" "width" 34 "height" 32 ) }}</span>
                 </div>
                 <h3>AUTOMATIC FAILOVER </h3>
                 <p>TiDB automatically handles malfunctions and protects your applications from machine failures or even downtime of an entire data-center. </p>
             </div>
             <div class="item">
                 <div class="image-wrap">
-                    <img class="icon" src="https://download.pingcap.com/images/icon_ddl.svg" alt="ONLINE DDL">
+                    <span class="icon">{{ partial "svgs/icon-ddl.svg" (dict "fill" "#fff" "width" 34 "height" 30 ) }}</span>
                 </div>
                 <h3>ONLINE DDL</h3>
                 <p>Evolve TiDB schemas as your requirement changes. You can add new columns and indices without stopping or affecting the on-going operations.</p>
             </div>
             <div class="item">
                 <div class="image-wrap">
-                    <img class="icon" src="https://download.pingcap.com/images/icon_time.svg" alt="7x24 HOURS  TECHNICAL SUPPORT">
+                    <span class="icon">{{ partial "svgs/icon-time.svg" (dict "fill" "#fff" "width" 34 "height" 34 ) }}</span>
                 </div>
                 <h3>7&#215;24 Service</h3>
                 <p>A professional technical support team is always ready to respond to your request.</p>
