--- a/layouts/partials/footer-cn.html
+++ b/layouts/partials/footer-cn.html
@@ -9,13 +9,13 @@
         <div class="right">
             <div class="social-links">
                 <a href="mailto:info@pingcap.com" class="link_icon email">
-                  {{ partial "svgs/icon-mail.svg" (dict "fill" "#fff" "size" 26 "width" 26 ) }}
+                  {{ partial "svgs/icon-mail.svg" }}
                 </a>
                 <a href="javascript:;" class="link_icon wechat" id="wechat">
-                  {{ partial "svgs/icon-weixin.svg" (dict "fill" "#fff" "size" 26 "width" 26 ) }}
+                  {{ partial "svgs/icon-weixin.svg" }}
                 </a>
                 <a href="http://www.weibo.com/pingcap" class="link_icon weibo">
-                   {{ partial "svgs/icon-weibo.svg" (dict "fill" "#fff" "size" 26 "width" 26 ) }}
+                   {{ partial "svgs/icon-weibo.svg" }}
                 </a>
             </div>
             <div class="subscribe">{{ partial "mailchimp-js.html" . }}</div>
