--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,16 +9,16 @@
         <div class="right">
             <div class="social-links">
                 <a href="mailto:info@pingcap.com" class="link_icon email">
-                  {{ partial "svgs/icon-mail.svg" (dict "fill" "#fff" "size" 26 "width" 26 ) }}
+                  {{ partial "svgs/icon-mail.svg" }}
                 </a>
                 <a href="https://github.com/pingcap/tidb" class="link_icon github">
-                  {{ partial "svgs/icon-github-footer.svg" (dict "fill" "#fff" "size" 26 "width" 26 ) }}
+                  {{ partial "svgs/icon-github-footer.svg" }}
                 </a>
                 <a href="https://twitter.com/PingCAP" class="link_icon twitter">
-                  {{ partial "svgs/icon-twitter.svg" (dict "fill" "#fff" "size" 26 "width" 26 ) }}
+                  {{ partial "svgs/icon-twitter.svg" }}
                 </a>
                 <a href="https://www.facebook.com/pingcap2015" class="link_icon facebook">
-                  {{ partial "svgs/icon-facebook.svg" (dict "fill" "#fff" "size" 26 "width" 26 ) }}
+                  {{ partial "svgs/icon-facebook.svg" }}
                 </a>
             </div>
             <div class="subscribe">{{ partial "mailchimp-js.html" . }}</div>
