--- a/src/less/bloglist.less
+++ b/src/less/bloglist.less
@@ -5,7 +5,7 @@
 @min-height: 1100px;
 @font-color: #3e3e3e;
 @blue: #3a59f0;
-.archives {
+.bloglist {
   width: 100%;
   color: @font-color;
   & a {
