--- a/src/less/index.less
+++ b/src/less/index.less
@@ -149,7 +149,7 @@
       display: flex;
       flex-flow: row wrap;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-start;
       text-align: center;
     }
     .item {
@@ -181,19 +181,20 @@
       }
     }
     .image-wrap {
-      position: relative;
       width: 3.5rem;
       height: 3.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       margin: 0 auto;
       border: 2px solid @white;
       border-radius: 50% 50%;
-      img {
-        display: block;
+      .icon {
         width: 1.7rem;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        height: 1.7rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     }
   }
