--- a/layouts/blog-cn/single.html
+++ b/layouts/blog-cn/single.html
@@ -1,86 +1,58 @@
-{{ define "headcss" }}
-{{$.Scratch.Set "nav_active" "blog"}}
-{{$.Scratch.Set "data_i18_link" "/blog" }}
-{{$.Scratch.Set "data_i18_cn" true }}
+{{ define "headcss" }} {{$.Scratch.Set "nav_active" "blog"}} {{$.Scratch.Set "data_i18_link" "/blog" }} {{$.Scratch.Set "data_i18_cn" true }}
 <link href="/css/doc.css" rel="stylesheet">
-<link href="/css/blog.css" rel="stylesheet">
-{{ end }}
-
-
-{{ define "main" }}
+<link href="/css/blog.css" rel="stylesheet"> {{ end }} {{ define "main" }}
 <div class="container">
-<div class="row">
+    <div class="row">
 
-  <div class="col-md-4 nav nav-tree" id="st-tree">
-    <h1 class="title"> 博客 </h1>
-    <div class="st_tree" id="doc-nav">
-      {{ $blogs := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil  }}
-       <ul>
-         {{ range $blogs.GroupByDate "2006" }}
-           <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
-           <ul >
-               {{ range .Pages.GroupByDate "2006-01" }}
-               <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
-               <ul>
-                   {{ range .Pages }}
-                   <li><i class="icon"></i><a href="{{ .URL }}">{{ .Title }}</a></li>
-                   {{ end }}
-               </ul>
-               {{ end }}
-           </ul>
-           {{ end }}
-       </ul>
-     </div>
-  </div>
+        <div class="col-md-4 nav nav-tree" id="st-tree">
+            <h1 class="title"> 博客 </h1>
+            <div class="st_tree" id="doc-nav">
+                {{ $blogs := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil }}
+                <ul>
+                    {{ range $blogs.GroupByDate "2006" }}
+                    <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
+                    <ul>
+                        {{ range .Pages.GroupByDate "2006-01" }}
+                        <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
+                        <ul>
+                            {{ range .Pages }}
+                            <li><i class="icon"></i><a href="{{ .URL }}">{{ .Title }}</a></li>
+                            {{ end }}
+                        </ul>
+                        {{ end }}
+                    </ul>
+                    {{ end }}
+                </ul>
+            </div>
+        </div>
 
 
-<div class="col-md-8 list">
-<div class="item">
-<div class="content">
-<h1 class="title">{{ .Title }}</h1>
-<ul class="blog-post-meta">
-<li class="meta-item">
-<svg aria-hidden="true" class="octicon octicon-calendar" height="16" version="1.1" viewBox="0 0 14 16" width="14"><path fill-rule="evenodd" d="M13 2h-1v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H6v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H2c-.55 0-1 .45-1 1v11c0 .55.45 1 1 1h11c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm0 12H2V5h11v9zM5 3H4V1h1v2zm6 0h-1V1h1v2zM6 7H5V6h1v1zm2 0H7V6h1v1zm2 0H9V6h1v1zm2 0h-1V6h1v1zM4 9H3V8h1v1zm2 0H5V8h1v1zm2 0H7V8h1v1zm2 0H9V8h1v1zm2 0h-1V8h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1zm2 0h-1v-1h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1z"></path></svg>
-{{ .Date.Format "Mon, Jan 2, 2006" }}
-</li>
-<li class="meta-item"><svg enable-background="new 0 0 139 139" viewBox="0 0 139 139" xmlns="http://www.w3.org/2000/svg"><circle cx="69.5" cy="52.2" fill="none" r="27.4" stroke="#000103" stroke-miterlimit="10" stroke-width="6"/><path d="m69.2 124.6c0 0 22 1.8 40.2-17.9 0 0 1.5-19.2-12.7-24.9l-9.9-4.7c0 0-1.1-1.9-.7-3.4" fill="none" stroke="#000103" stroke-miterlimit="10" stroke-width="6"/><path d="m70 124.6c0 0-22 1.8-40.2-17.9 0 0-1.5-19.2 12.7-24.9l9.9-4.7c0 0 1.1-1.9.7-3.4" fill="none" stroke="#000103" stroke-miterlimit="10" stroke-width="6"/></svg>
-{{ .Params.author }}
-</li>
-</ul>
-<div class="blog-text">{{ .Content }}</div>
+        <div class="col-md-8 list">
+            <div class="item">
+                <div class="content">
+                    <h1 class="title">{{ .Title }}</h1>
+                    <ul class="blog-post-meta">
+                        <li class="meta-item">
+                            <svg aria-hidden="true" class="octicon octicon-calendar" height="16" version="1.1" viewBox="0 0 14 16" width="14"><path fill-rule="evenodd" d="M13 2h-1v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H6v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H2c-.55 0-1 .45-1 1v11c0 .55.45 1 1 1h11c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm0 12H2V5h11v9zM5 3H4V1h1v2zm6 0h-1V1h1v2zM6 7H5V6h1v1zm2 0H7V6h1v1zm2 0H9V6h1v1zm2 0h-1V6h1v1zM4 9H3V8h1v1zm2 0H5V8h1v1zm2 0H7V8h1v1zm2 0H9V8h1v1zm2 0h-1V8h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1zm2 0h-1v-1h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1z"></path></svg>                            {{ .Date.Format "Mon, Jan 2, 2006" }}
+                        </li>
+                        <li class="meta-item"><svg enable-background="new 0 0 139 139" viewBox="0 0 139 139" xmlns="http://www.w3.org/2000/svg"><circle cx="69.5" cy="52.2" fill="none" r="27.4" stroke="#000103" stroke-miterlimit="10" stroke-width="6"/><path d="m69.2 124.6c0 0 22 1.8 40.2-17.9 0 0 1.5-19.2-12.7-24.9l-9.9-4.7c0 0-1.1-1.9-.7-3.4" fill="none" stroke="#000103" stroke-miterlimit="10" stroke-width="6"/><path d="m70 124.6c0 0-22 1.8-40.2-17.9 0 0-1.5-19.2 12.7-24.9l9.9-4.7c0 0 1.1-1.9.7-3.4" fill="none" stroke="#000103" stroke-miterlimit="10" stroke-width="6"/></svg>                            {{ .Params.author }}
+                        </li>
+                    </ul>
+                    <div class="blog-text">{{ .Content }}</div>
+                </div>
+
+                <div class="operate">
+                    <div class="row">
+                        <div class="f-thide">
+                            <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$" class="link_icon">
+                              <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#fff" "width" 22 "height" 22 ) }}</i>分享
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div class="operate">
-<div class="row">
-<div class="f-thide">
-<a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$"
-class="link_icon"><i class="icon">
-<svg enable-background="new 0 0 36 36" viewBox="0 0 36 36"
-     xmlns="http://www.w3.org/2000/svg">
-    <path d="m1.7 18.9c-.6 0-1-.4-1-1v-5.6c0-3 2.4-5.4 5.4-5.4.6 0 1 .4 1 1s-.4 1-1 1c-1.9 0-3.4 1.5-3.4 3.4v5.6c0 .6-.5 1-1 1z"
-          fill="#040000"/>
-    <path d="m27.7 31.9h-22c-2.8 0-5-2.2-5-5v-9.5c0-.6.4-1 1-1s1 .4 1 1v9.5c0 1.7 1.3 3 3 3h22c1.7 0 3-1.3 3-3v-2.5c0-.6.4-1 1-1s1 .4 1 1v2.5c0 2.8-2.3 5-5 5z"
-          fill="#040000"/>
-    <path d="m26.2 21c-.4 0-.7-.1-1-.2-.6-.3-1.5-1-1.5-3v-1.9c0-.6.4-1 1-1s1 .4 1 1v1.9c0 .8.2 1.1.3 1.2s.5 0 1.1-.5l5.1-4.2c.6-.5.9-1.1.9-1.7 0-.6-.3-1.3-.9-1.7l-5.1-4.2c-.6-.5-1-.5-1.1-.5-.1.1-.3.4-.3 1.2v1.5c0 .6-.4 1-1 1s-1-.4-1-1v-1.6c0-2 .9-2.7 1.5-3 .6-.2 1.8-.5 3.3.7l5.1 4.2c1.1.9 1.7 2 1.7 3.3s-.6 2.4-1.7 3.3l-5.1 4.2c-.9.7-1.7 1-2.3 1z"
-          fill="#040000"/>
-    <path d="m9.3 25.2c-.6 0-1-.4-1-1v-1.3c0-13.3 8.8-15 16.5-15 .6 0 1 .4 1 1s-.4 1-1 1c-10.3 0-14.5 3.8-14.5 13v1.3c0 .6-.4 1-1 1z"
-          fill="#040000"/>
-    <path d="m15.9 20.9c-.1 0-.2 0-.3-.1-.5-.2-.8-.8-.6-1.3 1.6-4.7 7.2-4.7 9.5-4.7.6 0 1 .4 1 1s-.4 1-1 1c-2.1 0-6.5 0-7.7 3.3-.1.5-.5.8-.9.8z"
-          fill="#040000"/>
-</svg>
-</i>分享</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-
-{{ end }}
-
-
-
-
-{{ define "footjs" }}
-{{ end }}
+{{ end }} {{ define "footjs" }} {{ end }}
